--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <article class="home">
     <div class="logo">
-        <a href="index.html">Магазин крутых скинов Brawl Stars</a>
+        <a href="index.html">Магазинь очень крутых скинов Brawl Stars</a>
     </div>
     <nav class="nav">
         <ul class="navul">
